bug fix : add csrf token to comment form

--- a/templates/show_figure.html.twig
+++ b/templates/show_figure.html.twig
@@ -114,6 +114,8 @@
                             }
                         }) }}
                         <button type="submit" class="button col-4 col-md-5 btn pt-1">Laisser un commentaire</button>
+                        
+                        {{ form_rest(comment_form) }}
                         {{ form_end(comment_form)}}
                     </div>
             </div>
